--- a/index.html
+++ b/index.html
@@ -4,12 +4,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CV Programador Promedio</title>
+  <link rel="shortcut icon" href="./assets/imgs/P.Redes1.png" type="image/x-icon">
+  <style>
+    * {
+      color-scheme: dark;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- Estructura de una etiqueta -->
-  <etiqueta> Contenido </etiqueta>
+  <img src="./assets/imgs/P.Redes1.png" alt="Foto de perfil Programador Promedio" width="200" height="200">
+  <h1>Hey! Soy Programador Promedio</h1>
+
+  <h2>Habilidades</h2>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Node</li>
+    <li>Express</li>
+  </ul>
+
+  <h2>Experiencia Laboral</h2>
+  <ul>
+    <li>
+      <h3>Tecnología XYZ</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in arcu sagittis, scelerisque neque vel, finibus
+        felis. Donec iaculis, mauris vitae facilisis semper, ligula nisi consectetur neque, vel ultricies lectus justo
+        vel velit. Nullam vel eros sit amet diam sagittis tincidunt.
+      </p>
+      <ul>
+        <li>2020 - Actualidad</li>
+        <li>Desarrollador Frontend</li>
+      </ul>
+    </li>
+    <li>
+      <h3>Tecnología ABC</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in arcu sagittis, scelerisque neque vel, finibus
+        felis.</p>
+    </li>
+  </ul>
+
+  <a href="#">Inicio</a>
+  <a href="./pages/porfolio.html">Porfolio</a>
+  <a href="./pages/contacto.html">Contacto</a>
+
+</body>
+
+</html>
+
+<!-- Estructura basica -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html> -->
+
+
+
+
+
+<!-- Estructura de una etiqueta -->
+<!-- <etiqueta> Contenido </etiqueta>
 
   <h1>Titulo principal, el de mayor jerarquia</h1>
   <h2>Titulo principal</h2>
@@ -30,19 +96,15 @@
   <a href="https://htmlreference.io/" target="_blank">Referencia de HTML</a>
 
   <a href="./pages/contacto.html">Contacto</a>
-</body>
 
-</html>
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  </ul>
 
-<!-- Estructura basica -->
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
-</html> -->
+  <ol type="">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  </ol> -->
