--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CV Programador Promedio</title>
+  <link rel="shortcut icon" href="./assets/imgs/P.Redes1.png" type="image/x-icon">
+  <style>
+    * {
+      color-scheme: dark;
+    }
+  </style>
 </head>
 
 <body>
   <h1>Contacto</h1>
-  <a href="../index.html">Ir al inicio</a>
+  <form>
+    <label for="nombre">Nombre</label>
+    <input type="text" name="nombre">
+
+    <label for="email">Email</label>
+    <input type="email" name="email">
+
+    <textarea name="consulta"></textarea>
+
+    <button>Enviar consulta</button>
+  </form>
+  <a href="../index.html">Inicio</a>
+  <a href="./porfolio.html">Porfolio</a>
+  <a href="#">Contacto</a>
 </body>
 
 </html>
